--- a/public/llm/01_llm_make_from_zero.ipynb
+++ b/public/llm/01_llm_make_from_zero.ipynb
@@ -15,7 +15,9 @@
     "\n",
     "`pip install tiktoken`\n",
     "\n",
-    "`pip install torch`"
+    "`pip install torch`\n",
+    "\n",
+    "`pip install python-dotenv`"
    ]
   },
   {
