--- a/private/zundamon.ipynb
+++ b/private/zundamon.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5f419c76",
    "metadata": {},
    "outputs": [
@@ -109,17 +109,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting simpleaudio\n",
-      "  Downloading simpleaudio-1.0.4.tar.gz (2.0 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m21.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hBuilding wheels for collected packages: simpleaudio\n",
-      "  Building wheel for simpleaudio (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for simpleaudio: filename=simpleaudio-1.0.4-cp313-cp313-macosx_11_0_arm64.whl size=2036429 sha256=3dc5f2f71947e637a6629ff816bb1da4e9d466113ca1f3775b723f4b44096672\n",
-      "  Stored in directory: /Users/kakuayato/Library/Caches/pip/wheels/32/52/44/2d31774644c6aedd866574b86a30f6576c6dddc31fa8fb84b3\n",
-      "Successfully built simpleaudio\n",
-      "Installing collected packages: simpleaudio\n",
-      "Successfully installed simpleaudio-1.0.4\n"
+      "Requirement already satisfied: simpleaudio in /Users/kakuayato/anaconda3/envs/LLMfromScratch/lib/python3.13/site-packages (1.0.4)\n"
      ]
     }
    ],
@@ -137,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a2579292",
    "metadata": {},
    "outputs": [],
@@ -150,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "be669a2c",
    "metadata": {},
    "outputs": [],
@@ -168,7 +158,7 @@
     "                        params={\"speaker\": 1},\n",
     "                        data=json.dumps(res1.json()))\n",
     "    # wavファイルに書き込み\n",
-    "    audio_file = f\"wav_dir/{ut}.wav\"\n",
+    "    audio_file = f\"wav_file/{ut}.wav\"\n",
     "    with open(audio_file, mode=\"wb\") as f:\n",
     "        f.write(res2.content)\n",
     "\n",
@@ -177,7 +167,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "d47c7190",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/kakuayato/Documents/GitHub/CurioSync_LLM/private\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
+   "id": "34129cf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio_file = textToVoice(\"僕の名前はずんだもん！何か用事はありますか？\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "af2bd403",
    "metadata": {},
    "outputs": [],
@@ -192,8 +210,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "19dae00f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ずんだもんと会話したい内容を入力するのだ\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'system_wav/start.wav'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mずんだもんと会話したい内容を入力するのだ\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mplayWav\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43msystem_wav/start.wav\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m      4\u001b[39m     \u001b[38;5;66;03m# 無限ループで会話を行う\u001b[39;00m\n\u001b[32m      5\u001b[39m     \u001b[38;5;66;03m# 終了処理はCtrl+Z\u001b[39;00m\n\u001b[32m      6\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m      7\u001b[39m         \u001b[38;5;66;03m# ユーザからの入力を受け取る\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 2\u001b[39m, in \u001b[36mplayWav\u001b[39m\u001b[34m(file)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mplayWav\u001b[39m(file):\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mrb\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m      3\u001b[39m         \u001b[38;5;66;03m# wavファイル再生\u001b[39;00m\n\u001b[32m      4\u001b[39m         wav_obj = simpleaudio.WaveObject.from_wave_file(f)\n\u001b[32m      5\u001b[39m         play_obj = wav_obj.play()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/LLMfromScratch/lib/python3.13/site-packages/IPython/core/interactiveshell.py:326\u001b[39m, in \u001b[36m_modified_open\u001b[39m\u001b[34m(file, *args, **kwargs)\u001b[39m\n\u001b[32m    319\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m}:\n\u001b[32m    320\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    321\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIPython won\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m by default \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    322\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    323\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33myou can use builtins\u001b[39m\u001b[33m'\u001b[39m\u001b[33m open.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    324\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m326\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'system_wav/start.wav'"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"ずんだもんと会話したい内容を入力するのだ\")\n",
+    "playWav(\"system_wav/start.wav\")\n",
+    "while True:\n",
+    "    # 無限ループで会話を行う\n",
+    "    # 終了処理はCtrl+Z\n",
+    "    try:\n",
+    "        # ユーザからの入力を受け取る\n",
+    "        print(\"あなた：\")\n",
+    "        text = input()\n",
+    "        # 入力をChatGPTにわたす\n",
+    "        reply_chat_gpt = call_chatGPT(text)\n",
+    "        print(\"ずんだもん：\")\n",
+    "        print(reply_chat_gpt)\n",
+    "        # ChatGPTの回答を音声に変換\n",
+    "        audio_file = textToVoice(reply_chat_gpt)\n",
+    "        # wavファイル再生\n",
+    "        playWav(audio_file)\n",
+    "    except Exception as e:\n",
+    "        #エラー処理\n",
+    "        print(e)\n",
+    "        print(\"エラーなのだ。もう一度内容を入力してほしいのだ\")\n",
+    "        playWav(\"system_wav/error.wav\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "187c6d8a",
    "metadata": {},
    "outputs": [],
    "source": []
