--- a/public/llm/01_llm_make_from_zero.ipynb
+++ b/public/llm/01_llm_make_from_zero.ipynb
@@ -461,24 +461,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a08719ee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: tiktoken in /Users/kakuayato/anaconda3/envs/LLMfromScratch/lib/python3.13/site-packages (0.9.0)\n",
-      "Requirement already satisfied: regex>=2022.1.18 in /Users/kakuayato/anaconda3/envs/LLMfromScratch/lib/python3.13/site-packages (from tiktoken) (2024.11.6)\n",
-      "Requirement already satisfied: requests>=2.26.0 in /Users/kakuayato/anaconda3/envs/LLMfromScratch/lib/python3.13/site-packages (from tiktoken) (2.32.3)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/kakuayato/anaconda3/envs/LLMfromScratch/lib/python3.13/site-packages (from requests>=2.26.0->tiktoken) (3.4.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/kakuayato/anaconda3/envs/LLMfromScratch/lib/python3.13/site-packages (from requests>=2.26.0->tiktoken) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/kakuayato/anaconda3/envs/LLMfromScratch/lib/python3.13/site-packages (from requests>=2.26.0->tiktoken) (2.4.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/kakuayato/anaconda3/envs/LLMfromScratch/lib/python3.13/site-packages (from requests>=2.26.0->tiktoken) (2025.1.31)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !pip install tiktoken"
    ]
@@ -701,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "43db2b73",
    "metadata": {},
    "outputs": [
@@ -733,56 +719,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "7240381f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting torch\n",
-      "  Downloading torch-2.6.0-cp313-none-macosx_11_0_arm64.whl.metadata (28 kB)\n",
-      "Collecting filelock (from torch)\n",
-      "  Using cached filelock-3.18.0-py3-none-any.whl.metadata (2.9 kB)\n",
-      "Requirement already satisfied: typing-extensions>=4.10.0 in /Users/kakuayato/anaconda3/envs/LLMfromScratch/lib/python3.13/site-packages (from torch) (4.13.2)\n",
-      "Collecting networkx (from torch)\n",
-      "  Using cached networkx-3.4.2-py3-none-any.whl.metadata (6.3 kB)\n",
-      "Collecting jinja2 (from torch)\n",
-      "  Using cached jinja2-3.1.6-py3-none-any.whl.metadata (2.9 kB)\n",
-      "Collecting fsspec (from torch)\n",
-      "  Downloading fsspec-2025.3.2-py3-none-any.whl.metadata (11 kB)\n",
-      "Requirement already satisfied: setuptools in /Users/kakuayato/anaconda3/envs/LLMfromScratch/lib/python3.13/site-packages (from torch) (75.8.0)\n",
-      "Collecting sympy==1.13.1 (from torch)\n",
-      "  Using cached sympy-1.13.1-py3-none-any.whl.metadata (12 kB)\n",
-      "Collecting mpmath<1.4,>=1.1.0 (from sympy==1.13.1->torch)\n",
-      "  Using cached mpmath-1.3.0-py3-none-any.whl.metadata (8.6 kB)\n",
-      "Collecting MarkupSafe>=2.0 (from jinja2->torch)\n",
-      "  Downloading MarkupSafe-3.0.2-cp313-cp313-macosx_11_0_arm64.whl.metadata (4.0 kB)\n",
-      "Downloading torch-2.6.0-cp313-none-macosx_11_0_arm64.whl (66.5 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.5/66.5 MB\u001b[0m \u001b[31m97.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mta \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hUsing cached sympy-1.13.1-py3-none-any.whl (6.2 MB)\n",
-      "Using cached filelock-3.18.0-py3-none-any.whl (16 kB)\n",
-      "Downloading fsspec-2025.3.2-py3-none-any.whl (194 kB)\n",
-      "Using cached jinja2-3.1.6-py3-none-any.whl (134 kB)\n",
-      "Using cached networkx-3.4.2-py3-none-any.whl (1.7 MB)\n",
-      "Downloading MarkupSafe-3.0.2-cp313-cp313-macosx_11_0_arm64.whl (12 kB)\n",
-      "Using cached mpmath-1.3.0-py3-none-any.whl (536 kB)\n",
-      "Installing collected packages: mpmath, sympy, networkx, MarkupSafe, fsspec, filelock, jinja2, torch\n",
-      "Successfully installed MarkupSafe-3.0.2 filelock-3.18.0 fsspec-2025.3.2 jinja2-3.1.6 mpmath-1.3.0 networkx-3.4.2 sympy-1.13.1 torch-2.6.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !pip install torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "id": "e5ea1042",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kakuayato/anaconda3/envs/LLMfromScratch/lib/python3.13/site-packages/torch/_subclasses/functional_tensor.py:275: UserWarning: Failed to initialize NumPy: No module named 'numpy' (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:81.)\n",
+      "  cpu = _conversion_method_template(device=torch.device(\"cpu\"))\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -809,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "id": "91b5c5b2",
    "metadata": {},
    "outputs": [],
@@ -833,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 33,
    "id": "1153e293",
    "metadata": {},
    "outputs": [
@@ -863,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 34,
    "id": "42a672b6",
    "metadata": {},
    "outputs": [
@@ -917,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 35,
    "id": "803010ab",
    "metadata": {},
    "outputs": [],
@@ -930,7 +889,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 36,
+   "id": "f309814e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([2, 3, 5, 1])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "ce7b4c2d",
    "metadata": {},
    "outputs": [
@@ -958,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 38,
    "id": "9de7f49d",
    "metadata": {},
    "outputs": [
@@ -987,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 39,
    "id": "1227499f",
    "metadata": {},
    "outputs": [
@@ -1008,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 40,
    "id": "6e7fdfbe",
    "metadata": {},
    "outputs": [
@@ -1044,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 41,
    "id": "9fbe1277",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1044,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 44,
+   "id": "dc9658c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[   40,   367,  2885,  1464],\n",
+       "        [ 1807,  3619,   402,   271],\n",
+       "        [10899,  2138,   257,  7026],\n",
+       "        [15632,   438,  2016,   257],\n",
+       "        [  922,  5891,  1576,   438],\n",
+       "        [  568,   340,   373,   645],\n",
+       "        [ 1049,  5975,   284,   502],\n",
+       "        [  284,  3285,   326,    11]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "3ce0b787",
    "metadata": {},
    "outputs": [
@@ -1086,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 43,
    "id": "6bbccd70",
    "metadata": {},
    "outputs": [
