--- a/public/llm/03_makingGPT.ipynb
+++ b/public/llm/03_makingGPT.ipynb
@@ -1038,11 +1038,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
+   "id": "97df962f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_sum_parameters(model):\n",
+    "    total_params = sum(p.numel() for p in model.parameters())\n",
+    "    print(f\"Total number of parameters: {total_params: ,}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "087ed28c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gpt2_medium = GPTModel(\n",
+    "    {\n",
+    "        \"vocab_size\": 50257,\n",
+    "        \"context_length\": 1024,\n",
+    "        \"emb_dim\": 1024,\n",
+    "        \"n_heads\": 16,\n",
+    "        \"n_layers\": 24,\n",
+    "        \"drop_rate\": 0.1,\n",
+    "        \"qkv_bias\": False\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "gpt2_large = GPTModel(\n",
+    "    {\n",
+    "        \"vocab_size\": 50257,\n",
+    "        \"context_length\": 1024,\n",
+    "        \"emb_dim\": 1280,\n",
+    "        \"n_heads\": 20,\n",
+    "        \"n_layers\": 36,\n",
+    "        \"drop_rate\": 0.1,\n",
+    "        \"qkv_bias\": False\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "gpt2_XL = GPTModel(\n",
+    "    {\n",
+    "        \"vocab_size\": 50257,\n",
+    "        \"context_length\": 1024,\n",
+    "        \"emb_dim\": 1600,\n",
+    "        \"n_heads\": 25,\n",
+    "        \"n_layers\": 48,\n",
+    "        \"drop_rate\": 0.1,\n",
+    "        \"qkv_bias\": False\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "cd236362",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of parameters:  406,212,608\n",
+      "Total number of parameters:  838,220,800\n",
+      "Total number of parameters:  1,637,792,000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_sum_parameters(gpt2_medium)\n",
+    "print_sum_parameters(gpt2_large)\n",
+    "print_sum_parameters(gpt2_XL)"
+   ]
   },
   {
    "cell_type": "markdown",
