update and fix gitignore

--- a/public/IRM/RM/01_makingRM.ipynb
+++ b/public/IRM/RM/01_makingRM.ipynb
@@ -96,6 +96,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "f5548537",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'chosen'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mtrain_dataset\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mchosen\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mshape)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'chosen'"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_dataset[4][\"chosen\"].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "6296b5b6",
    "metadata": {},
@@ -3238,7 +3260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "0e2dc69b",
    "metadata": {},
    "outputs": [
